Updated title, About Me section, Added first project, and updated contact links

--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Vince Caldwell | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -46,9 +46,9 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Vince Caldwell</span>
+          Hello All, my name is <span class="text-color-main">Vince Caldwell</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a skilled Front-End Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -70,7 +70,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/headshot1.png"
                 alt="Profile Image"
               />
             </div>
@@ -78,16 +78,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                First off, I am a Web Developer. I say that because less than 6 months ago, I made a decision that would change the trajectory of my future. I spent years in the Financial Services industry when attending and graduating college with a Bachelors in Business Management. Then, in 2017 I decided things had to change. That change was relocating to Florida and transitioning into a new field.
+
               </p>
               <p class="about-wrapper__info-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Excepturi neque, ipsa animi maiores repellendu distinctioaperiam
-                earum dolor voluptatum consequatur blanditiis inventore debitis
-                fuga numquam voluptate architecto itaque molestiae.
+                I spent the next 3 years working diligently and determined to help within Human Services. Then, abruptly everything came to a halt, in February of 2020 and I found myself laid off. This is the moment when I discovered what would become my new passion, Web Development. I proceeded to work day in, day out to learn and practice as much coding, design, functionality and oveall processes as I could since... 
+              </p>
+              <p class="about-wrapper__info-text">
+                I have learned the fundamentals of Web Development including HTML, CSS, Javascript; plus modern libraries and frameworks. I have a foundation in Back-End development including servers with Node.js/Express.js and databases in SQL with PostgreSQL. I am proficient with Git and Github, Heroku and Netlify deployment. To Summarise, I am a Web Developer!
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
@@ -113,29 +111,25 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title one</h3>
+                <h3 class="project-wrapper__text-title">The Universe in Theory</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This was a project website I devloped after combining two of my top interests: Web Devlopment and Space. This project was created using HTML, CSS, JavaScript and Bootstrap. The site has a fully responsive design and layout. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/universe/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/vincecaldwell/universe">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://vincecaldwell.github.io/universe/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/logo.png" />
                   </div>
                 </a>
               </div>
@@ -223,13 +217,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            Let's talk code, collaboration or oppurtunity!
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:vince.l.caldwell@gmail.com"
+            >Email Me</a
           >
         </div>
       </div>
@@ -243,16 +237,16 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
+          <a href="https://twitter.com/vince_webdev" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://codesandbox.io/u/vincecaldwell" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/vince-caldwell/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/vincecaldwell" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
