--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,7 +35,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hello All, my name is <span class="text-color-main">Vince Caldwell</span>
+          Hello All, my name is <span class="text-color-main"> Vince Caldwell</span>
           <br />
           I'm a skilled Front-End Developer.
         </h1>
@@ -78,17 +67,17 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                First off, I am a Web Developer. I say that because less than 6 months ago, I made a decision that would change the trajectory of my future. I spent years in the Financial Services industry when attending and graduating college with a Bachelors in Business Management. Then, in 2017 I decided things had to change. That change was relocating to Florida and transitioning into a new field.
+                First off, I am a Web Developer. I say that because not too long ago, I made a decision that would change the trajectory of my future. I spent several years in the Financial Services industry while attending and graduating college with a Bachelors in Business Management. Then, in 2017 I decided things had to change. That change was relocating to Florida and transitioning into a new field.
 
               </p>
               <p class="about-wrapper__info-text">
-                I spent the next 3 years working diligently and determined to help within Human Services. Then, abruptly everything came to a halt, in February of 2020 and I found myself laid off. This is the moment when I discovered what would become my new passion, Web Development. I proceeded to work day in, day out to learn and practice as much coding, design, functionality and oveall processes as I could since... 
+                I spent the next 3 years working diligently and determined to help within the Human Services field. Then, abruptly everything came to a halt, in February of 2020 and I found myself laid off. This was the moment when I discovered, what would become my new passion, Web Development. I proceeded to work day in, day out to learn, practice and develope as much I could... 
               </p>
               <p class="about-wrapper__info-text">
                 I have learned the fundamentals of Web Development including HTML, CSS, Javascript; plus modern libraries and frameworks. I have a foundation in Back-End development including servers with Node.js/Express.js and databases in SQL with PostgreSQL. I am proficient with Git and Github, Heroku and Netlify deployment. To Summarise, I am a Web Developer!
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="">
                   View Resume
                 </a>
               </span>
@@ -114,7 +103,7 @@
                 <h3 class="project-wrapper__text-title">The Universe in Theory</h3>
                 <div>
                   <p class="mb-4">
-                    This was a project website I devloped after combining two of my top interests: Web Devlopment and Space. This project was created using HTML, CSS, JavaScript and Bootstrap. The site has a fully responsive design and layout. 
+                    This was a project website I devloped after combining two of my top interests: Web Devlopment and Space. This project was created using HTML, CSS, JavaScript and Bootstrap. The site has a fully responsive design and layout utlizing CSS Grid. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/universe/">
@@ -129,7 +118,7 @@
               <div class="project-wrapper__image">
                 <a href="https://vincecaldwell.github.io/universe/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/logo.png" />
+                    <img class="img-fluid" src="./assets/Universe.png" />
                   </div>
                 </a>
               </div>
@@ -141,29 +130,25 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">ISS Tracker</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This app was created to provide real-time data about the International Space Station. Developed using React.js and utlizing API information, data is sent seamlessly to the user. Web-app is fully responsive and styled with CSS. (map view feature, build in progress)
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/iss-tracker/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/vincecaldwell/iss-tracker">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://vincecaldwell.github.io/iss-tracker/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Track2.png" />
                   </div>
                 </a>
               </div>
@@ -175,29 +160,25 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">RoboFriends</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This is a Web-app that provides a list of robots, but with functionality to dynamically filter content in real-time. Built with React.js and fully responsive layout. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/robofriends/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/vincecaldwell/robofriends">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://vincecaldwell.github.io/robofriends/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/Friends.png" />
                   </div>
                 </a>
               </div>
@@ -253,32 +234,9 @@
 
         <hr />
 
-        <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2020 - Portfolio developed by Vince Caldwell</a>
           </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
         </p>
       </div>
     </footer>
