removed robofirend project, added photo search project

--- a/src/template.html
+++ b/src/template.html
@@ -160,25 +160,25 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">RoboFriends</h3>
+                <h3 class="project-wrapper__text-title">Photo Search</h3>
                 <div>
                   <p class="mb-4">
-                    This is a Web-app that provides a list of robots, but with functionality to dynamically filter content in real-time. Built with React.js and fully responsive layout. 
+                    This app was created with React.js in combination with Flickr API(photo.search). This allows the app to have search text placed within the input field labeled "Type here". Then, hit "enter" or click the "Search" button, and the app will refresh with new pictures. Built with React.js, API, tachyons, CSS and HTML.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/robofriends/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/photo-search/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/vincecaldwell/robofriends">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/vincecaldwell/photo-search">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://vincecaldwell.github.io/robofriends/" target="_blank">
+                <a href="https://vincecaldwell.github.io/photo-search/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/Friends.png" />
+                    <img class="img-fluid" src="./assets/photo.png" />
                   </div>
                 </a>
               </div>
