removed unused code, edit meta tags

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,9 @@
     <!-- Put here your site title -->
     <title>Vince Caldwell | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[vince_webdev, [Vince Caldwell], HTML,CSS,JavaScript" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="[Vince Caldwell] | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -22,9 +22,6 @@
     <script>
       ScrollReveal({ reset: false });
     </script>
-
-    <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
@@ -77,7 +74,7 @@
                 I have learned the fundamentals of Web Development including HTML, CSS, Javascript; plus modern libraries and frameworks. I have a foundation in Back-End development including servers with Node.js/Express.js and databases in SQL with PostgreSQL. I am proficient with Git and Github, Heroku and Netlify deployment. To Summarise, I am a Web Developer!
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/Resume-web.developer.pdf">
                   View Resume
                 </a>
               </span>
