updated photo search logo, edited iss track text

--- a/src/template.html
+++ b/src/template.html
@@ -34,7 +34,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hello All, my name is <span class="text-color-main"> Vince Caldwell</span>
           <br />
-          I'm a skilled Front-End Developer.
+          I'm a skilled Front-End Developer
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -74,7 +74,7 @@
                 I have learned the fundamentals of Web Development including HTML, CSS, Javascript; plus modern libraries and frameworks. I have a foundation in Back-End development including servers with Node.js/Express.js and databases in SQL with PostgreSQL. I am proficient with Git and Github, Heroku and Netlify deployment. To Summarise, I am a Web Developer!
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/Resume-web.developer.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="">
                   View Resume
                 </a>
               </span>
@@ -130,7 +130,7 @@
                 <h3 class="project-wrapper__text-title">ISS Tracker</h3>
                 <div>
                   <p class="mb-4">
-                    This app was created to provide real-time data about the International Space Station. Developed using React.js and utlizing API information, data is sent seamlessly to the user. Web-app is fully responsive and styled with CSS. (map view feature, build in progress)
+                    This app was created to provide real-time data about the International Space Station. Developed using React.js and utlizing API information, data is sent seamlessly to the user. Web-app is fully responsive and styled with CSS.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://vincecaldwell.github.io/iss-tracker/">
